zeit.cms changes
================

1.28 (unreleased)
-----------------

- Schönere Anzeige von Checkboxen (CMS-Skin und Vivi-Skin).

- Date-Last-Modified zur XML-Referenz hinzugefügt (#5965).

Technisches
+++++++++++

- AddableCMSContentTypeSource hinzugefügt (#5937).

1.27 (2009-08-10)
-----------------

- Markierungen für Inline-Assets (#5770).

- WebDAV-Metadaten werden in das XML des Link-Objekts kopiert (#5904).

- »Banner« in die Standardmetadaten (bisher nur bei Artikel, #5931).

- Schönere Anzeige für Checkboxen in Metadaten (Vivi).

- Panels in der Sidebar werden wieder vollständig angeeigt (Vivi, #5840).

Technisches
+++++++++++

- Basisklasse für Adapter, die WebDAVPropertys brauchen.

- SubPageForm wurde von LightboxForm abgespalten (für #5937).

- Die TypeDeclaration enthält den Namen des Add-Forms (für #5937).

1.26.1 (2009-08-04)
-------------------

- DragAndDrop im Clipboard funktioniert wieder.

- Objektauswahl-Lightbox funktioniert wieder.

1.26 (2009-08-03)
-----------------

- Neues Feld »Product-Id« in den Standardmetadaten (#5819).

- printRessort als CommonMetadata hinzugefügt.

1.25 (2009-07-28)
-----------------

- Es ist jetzt nicht mehr möglich, dass das CMS das selbe Objekte zwei mal
  gleichzeitig veröffentlicht. Verschiedene Objekte werden weiterhin parallel
  veröffentlicht (#5579).

Technisches
+++++++++++

- JSONView verwendet busy-CSS-Klasse statt den Text "Loading"

- JSONView gibt JSON in den Deferreds als Ergebnis aus.

- Objectify-Bäume werden nur noch einmal pro Transaktion geladen.

- CMSContentSource gibt Auskunft über beinhaltete Content-Typen.

1.24 (2009-07-22)
-----------------

- SubRessort wird immer umgeschrieben, auch wenn es vorher einen ungültigen
  Wert hatte (#5431)

- Ungültige Ressorts und Unterressorts werden jetzt im CMS angezeigt (via
  #5431).

- Navigationsbaum wird asynchron geladen und zwischengespeichert. Dies sollte
  die Ladezeiten deutlich verbessern.

Technisches
+++++++++++
